# Skipping_Rope_SHEE

./: README.md  desktop.ini
Firmware/Web_version/: CMakeLists.txt  README.md  desktop.ini  sdkconfig  sdkconfig.old
Firmware/Web_version/components/icm42688p/: CMakeLists.txt  icm42688p.c
Firmware/Web_version/components/icm42688p/include/: icm42688p.h
Firmware/Web_version/components/lvgl/: README.md  lvgl.pc.in
Firmware/Web_version/components/lvgl/.github/workflows/: ccpp.yml
Firmware/Web_version/components/lvgl/env_support/cmake/: esp.cmake
Firmware/Web_version/components/lvgl/src/core/: lv_event.c
Firmware/Web_version/components/lvgl_esp32_drivers/: .gitignore  CMakeLists.txt  README.md  lvgl_helpers.c  lvgl_helpers.h  lvgl_spi_conf.h
Firmware/Web_version/components/lvgl_esp32_drivers/lvgl_tft/: GC9A01.c  Kconfig  disp_driver.c  disp_driver.h  esp_lcd_backlight.c  hx8357.c  il3820.c  ili9163c.c  ili9341.c  ili9341.h  ili9481.c  ili9486.c  ili9488.c  ili9488.h  pcd8544.c  pcd8544.h  ra8875.c  ssd1306.c  st7735s.c  st7789.c  st7789.h  st7796s.c
Firmware/Web_version/components/lvgl_porting/: CMakeLists.txt  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
Firmware/Web_version/main/: CMakeLists.txt  SiYuanHeiTiGoogleBan_14.c  SiYuanHeiTiGoogleBan_16.c  SiYuanHeiTiGoogleBan_68.c  main.c  my_ui.c  my_ui.h  wifi_smartconfig.c
Model/: 外壳-1.stl  外壳-2.stl
Software/: config.ini
